test: cleanups & physical consumer testing